--- a/latest/website.css
+++ b/latest/website.css
@@ -13,14 +13,14 @@ body#md {
     font-size: 15px;
     padding-right: 20px;
     overflow-x: hidden;
-    text-overflow: ellipses;
+    text-overflow: ellipsis;
 }
 
 
 .md .longTOC {
     width: 170px;
     display: block;
-    border-right: 3px solid #00c8c8;
+    border-right: 3px solid #444444;
     overflow-y:scroll;
     font-size: 15px;
     font-family: inherit;
@@ -68,7 +68,7 @@ body#md {
 }
 
 .md h1, .md h2, .md h3, .md h4, .md h5, .md h6 {
-    color: #00c8c8;
+    color: #444444;
     border-color: inherit;
 }
 
@@ -93,13 +93,13 @@ body#md {
     padding-left: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-    text-shadow: 0px 0px 3px #00c8c8;
-    background-color: #00c8c8;
-    background-image: url('https://casual-effects.com/markdeep/website-banner.png');
+    text-shadow: 0px 0px 3px #bccff9;
+    background-color: #444444;
+    background-image: url('_IMAGE/pen.png');
     background-repeat: no-repeat;
     background-position: top right;
     background-size: contain;
-    color: #fff;
+    color: #FCFCFC;
     font-size: 45px;
     z-index: 10;
 }
