--- a/latest/journal.css
+++ b/latest/journal.css
@@ -36,6 +36,10 @@ img.markdeep {
     margin-bottom: -30px;
 }
 
+.md .longTOC a {
+    color: #000;
+}
+
 .md div.title, .md div.subtitle, .md h1, .md h2, .md h3, .md h4, .md h5, .md h6 {
 /*    font-family: 'Roboto', Arial, Helvetica, "sans serif";
 */    font-weight: 300;
@@ -113,8 +117,8 @@ img.markdeep {
 }
 
 /* no numbering of headings */
-.md h1:before, .md h2:before, .md h3:before, .md h4:before, .md h5:before, .md h6:before { content: none; }
-.md .tocNumber { display: none; }
+/*.md h1:before, .md h2:before, .md h3:before, .md h4:before, .md h5:before, .md h6:before { content: none; }
+.md .tocNumber { display: none; }*/
 
 @media screen {
     body {
